tests/miz/fail/types/fail_type_elaboration_inline_definition_gap_001.miz
theorem InlineDefinitionPayloadBoundary: thesis proof
  deffunc F(x be set) -> set equals x;
  defpred P(y be set) means thesis;
  thus thesis;
end;
